# drf-nested

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
drf-nested/mixins/: create_nested_mixin.py  nestable_mixin.py  unique_field_mixin.py  unique_together_mixin.py
drf_nested/mixins/: __init__.py  base_nestable_mixin.py  base_nested_mixin.py  create_nested_mixin.py  generic_relation_mixin.py  nestable_mixin.py  through_mixin.py  unique_field_mixin.py  unique_together_mixin.py  update_nested_mixin.py
drf_nested/utils/: __init__.py  nested_exceptions.py  queryset_to_instance.py
examples/nested_example/: manage.py  pytest.ini  requirements.txt
examples/nested_example/nested_example/: models.py  serializers.py  settings.py  urls.py  wsgi.py
examples/nested_example/nested_example/migrations/: 0001_initial.py  0002_auto_20190226_0945.py  0002_auto_20190611_1209.py
examples/nested_example/nested_example/tests/: test_nested_create_mixin.py  test_nested_update_mixin.py
mixins/: base_nested_mixin.py  create_nested_mixin.py  update_nested_mixin.py
