[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
python_files = [
    "tests.py",
    "test_*.py",
    "tests_*.py",
    "*_tests.py",
]
norecursedirs = [
    ".git", "v/", "venv/", "media/", "staticfiles/", "static/", ".idea",
]
addopts = "--disable-pytest-warnings -v --reuse-db"
#addopts = "--disable-pytest-warnings -v --reuse-db --create-db"
DJANGO_SETTINGS_MODULE="nested_example.settings"

[tool.poetry]
name = "drf-nested"
version = "1.3.0"
description = ""
authors = ["Artur Veres <artur8118@gmail.com>", "Andréas Kühne <andreas.kuhne@promoteint.com>"]
license = "License :: OSI Approved :: MIT License"
readme = "README.md"
packages = [{ include = "drf_nested" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = ">=3.0.0,<6.0.0"
djangorestframework = ">=3.15.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^5.0.4"
pre-commit = "^3.7.1"
pytest-django = "^4.8.0"
poetry-plugin-up = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
