[project]
name = "drf-nested"
version = "1.3.4"
description = "DRF Nested"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Artur Veres", email = "artur8118@gmail.com" },
    { name = "Andréas Kühne", email = "andreas.kuhne@promoteint.com" },
]
readme = "README.md"
dependencies = [
    "django>=3.0.0,<7.0.0",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.32",
    "pre-commit>=3.8.0",
    "pytest-django>=4.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drf_nested"]

[tool.pytest.ini_options]
python_files = [
    "tests.py",
    "test_*.py",
    "tests_*.py",
    "*_tests.py",
]
norecursedirs = [
    ".git", "v/", "venv/", "media/", "staticfiles/", "static/", ".idea",
]
addopts = "--disable-pytest-warnings -v --reuse-db"
DJANGO_SETTINGS_MODULE = "nested_example.settings"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Keep parity with the prior flake8 setup: default pyflakes (F) + pycodestyle (E)
# plus isort (I) to replace the isort tool.
select = ["E", "F", "I"]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by formatter)
    "E231",  # missing whitespace after ','
    "F811",  # redefinition of unused name
    "E722",  # do not use bare except
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*/migrations/*" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["drf_nested"]

[tool.ty.environment]
root = ["./drf_nested"]
